Добавлены исправленные тесты, pom и отчет Jacoco